src/main/java/binaryfuck/antlr/Binaryfuck.g4
grammar Binaryfuck;

file: expression*;

expression: operator | ONEONEZERO expression* ONEONEONE;

operator: ZEROONEZERO | ZEROONEONE | ZEROZEROZERO | ZEROZEROONE | ONEZEROZERO | ONEZEROONE;

ZEROONEZERO: '010';
ZEROONEONE: '011';
ZEROZEROZERO: '000';
ZEROZEROONE: '001';
ONEZEROZERO: '100';
ONEZEROONE: '101';
ONEONEZERO: '110';
ONEONEONE: '111';
WS: . -> skip;
